The currect MAPE with GaussianNaive Bayes is %20. Please check the commit diff for the changes

--- a/2-TimeseriesPrediction/TimeseriesPredictionExercise.ipynb
+++ b/2-TimeseriesPrediction/TimeseriesPredictionExercise.ipynb
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "household_data_samples = list(it_take(20, it_load_data(sourcefile)))\n",
+    "household_data_samples = list(it_take(4, it_load_data(sourcefile)))\n",
     "household_data_samples"
    ]
   },
@@ -194,9 +194,9 @@
    "outputs": [],
    "source": [
     "itslice = it_timeslices(it_load_data(sourcefile), 15, 15)\n",
-    "df = pd.DataFrame(next(itslice).actuals, columns=Measurement._fields)[0:50]\n",
-    "df[df[\"sid\"] == \"s18\"]\n",
-    "df[0:100]"
+    "df = pd.DataFrame(next(itslice).actuals, columns=Measurement._fields)\n",
+    "#df[df[\"sid\"] == \"s18\"]\n",
+    "df"
    ]
   },
   {
@@ -241,6 +241,7 @@
     "        l_measures = list(gmeasures)\n",
     "        dc.update({key + \"_last\": float(l_measures[len(l_measures)-1].load)})\n",
     "        dc.update({key + \"_stdev\": np.std(list(map(lambda a: a.load, l_measures)))})\n",
+    "        dc.update({key + \"_max\": np.amax(list(map(lambda a: a.load, l_measures)))})\n",
     "    \n",
     "    dc.update(target=calc_average_load(pb.actuals))\n",
     "    dc.update({'target_disc': 0})\n",
@@ -402,6 +403,7 @@
     "            try:\n",
     "                #predictor = tree.DecisionTreeClassifier() #you may want to do the training once a day/week to make the prediction faster\n",
     "                predictor = naive_bayes.GaussianNB()\n",
+    "                #predictor = naive_bayes.MultinomialNB()\n",
     "                clf = predictor.fit(Xtrain, Ytrain) #actually training the machine learning algorithm\n",
     "                predicted = clf.predict(Xtest)[0]\n",
     "                if shoulddiscretize:\n",
@@ -464,7 +466,7 @@
    "source": [
     "%t\n",
     "discretize = True\n",
-    "pred_results = list(it_take(50, evaluate_prediction(7, it_timeslices(it_load_data(sourcefile), 30, 30), 30, 30)))\n",
+    "pred_results = list(it_take(200, evaluate_prediction(7, it_timeslices(it_load_data(sourcefile), 30, 30), 30, 30)))\n",
     "pred_results_df = pd.DataFrame(pred_results, columns=ForecastResult._fields)\n",
     "#del pred_results\n",
     "pred_results_df.head()"
@@ -526,7 +528,7 @@
     "def prediction_evaluation(horizon, historylength, increment):\n",
     "    return eval_mape(it_take(100, evaluate_prediction(historylength, it_timeslices(it_load_data(sourcefile), horizon, increment), historylength, increment)))\n",
     "\n",
-    "percent_mape = prediction_evaluation(30, 4, 15) #Evaluate 30 min ahead forecast, 4 days of lerning, every 15 minutes\n",
+    "percent_mape = prediction_evaluation(20, 6, 10) #Evaluate 30 min ahead forecast, 4 days of lerning, every 15 minutes\n",
     "print(\"The MAPE of the prediction was:\", percent_mape) "
    ]
   },
