2 weeks of evaluation with Gaussian Mixture Model target discretization. Num of clusters is changed to 20 from 8.

--- a/2-TimeseriesPrediction/TimeseriesPredictionExercise.ipynb
+++ b/2-TimeseriesPrediction/TimeseriesPredictionExercise.ipynb
@@ -330,23 +330,28 @@
    "outputs": [],
    "source": [
     "from scipy import stats\n",
-    "from sklearn.cluster import KMeans\n",
+    "from sklearn.cluster import KMeans,MiniBatchKMeans\n",
+    "from sklearn import mixture\n",
     "\n",
     "def discretize_target(n_clusters, list_of_features):\n",
     "    targets = list(map(lambda f: f['target'], list_of_features))\n",
     "    targets_arr = np.array(targets, dtype=np.float).reshape(-1, 1)\n",
     "    \n",
     "    #You could try a different cluster algorithm here\n",
-    "    km = KMeans(n_clusters = n_clusters)\n",
+    "    #km = KMeans(n_clusters = n_clusters)   little slower then Mini b # 28% MAPE\n",
+    "    #km = MiniBatchKMeans(n_clusters = n_clusters)# 28%\n",
+    "    km = mixture.GaussianMixture(n_components=n_clusters,covariance_type=\"diag\") #27%\n",
     "    km.fit(targets_arr)\n",
     "    \n",
     "    for feature in list_of_features:\n",
     "        feature['target_disc'] = km.predict(feature['target'])[0]\n",
-    "        \n",
+    "    \n",
+    "    #km.cluster_ceters_ = km.means_\n",
     "    return km\n",
     "\n",
     "def undiscretize_target(km, value):\n",
-    "    return km.cluster_centers_[value][0]\n",
+    "    #return km.cluster_centers_[value][0]\n",
+    "    return km.means_[value][0]\n",
     "    "
    ]
   },
@@ -370,6 +375,8 @@
    "source": [
     "from sklearn import svm\n",
     "from sklearn import naive_bayes\n",
+    "from sklearn import linear_model\n",
+    "from sklearn import mixture\n",
     "from sklearn import tree\n",
     "\n",
     "def evaluate_prediction(historylength_days, it_slices, minutes, increment, shoulddiscretize=True):\n",
@@ -393,7 +400,7 @@
     "            \n",
     "        if cnt > (historyslices + skipintermediate):\n",
     "            if shoulddiscretize: #The centroids can change over time, this is why rediscreize each time\n",
-    "                km = discretize_target(8, training_historic)\n",
+    "                km = discretize_target(20, training_historic)\n",
     "                            \n",
     "            Xtrain, Ytrain = to_ml_dataset(training_historic, shoulddiscretize) #trainingset\n",
     "            Xtest, Ytest = to_ml_dataset([extracted_features], shoulddiscretize) #predictionset\n",
@@ -401,9 +408,13 @@
     "            #yield training_historic, extracted_features\n",
     "            \n",
     "            try:\n",
-    "                #predictor = tree.DecisionTreeClassifier() #you may want to do the training once a day/week to make the prediction faster\n",
+    "                #predictor = tree.ExtraTreeClassifier() #you may want to do the training once a day/week to make the prediction faster\n",
     "                predictor = naive_bayes.GaussianNB()\n",
     "                #predictor = naive_bayes.MultinomialNB()\n",
+    "                #predictor = naive_bayes.BernoulliNB()\n",
+    "                #predictor = linear_model.RidgeClassifier()\n",
+    "                #predictor = linear_model.SGDClassifier()   # not good\n",
+    "                #predictor = mixture.BayesianGaussianMixture()\n",
     "                clf = predictor.fit(Xtrain, Ytrain) #actually training the machine learning algorithm\n",
     "                predicted = clf.predict(Xtest)[0]\n",
     "                if shoulddiscretize:\n",
@@ -452,34 +463,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%t\n",
-    "discretize = True\n",
-    "pred_results = list(it_take(200, evaluate_prediction(7, it_timeslices(it_load_data(sourcefile), 30, 30), 30, 30)))\n",
-    "pred_results_df = pd.DataFrame(pred_results, columns=ForecastResult._fields)\n",
+    "#discretize = True\n",
+    "\n",
+    "#pred_results = it_take(1000, evaluate_prediction(historylength1, it_timeslices(it_load_data(sourcefile), horizon1, increment1), horizon1, increment1))\n",
+    "#pred_results_df = pd.DataFrame(list(pred_results), columns=ForecastResult._fields)\n",
     "#del pred_results\n",
-    "pred_results_df.head()"
+    "#pred_results_df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#print(eval_mape(pred_results))\n",
+    "#pred_results_df.set_index('ts').plot()\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -487,7 +491,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred_results_df.set_index('ts').plot()"
+    "#pred_results_df[600:650].set_index('ts').plot()"
    ]
   },
   {
@@ -522,14 +526,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "horizon1 = 90\n",
+    "historylength1 = 2\n",
+    "increment1 = 90"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prediction_evaluation(horizon, historylength, increment):\n",
-    "    return eval_mape(it_take(100, evaluate_prediction(historylength, it_timeslices(it_load_data(sourcefile), horizon, increment), historylength, increment)))\n",
+    "def prediction_evaluation(horizon_and_predbase, historylength, increment):\n",
+    "    evaluation_length = int(2 * 7 * 24 * 60 /increment)\n",
+    "    res_list = list(it_take(evaluation_length, evaluate_prediction(historylength, it_timeslices(it_load_data(sourcefile), horizon_and_predbase, increment), horizon_and_predbase, increment)))\n",
+    "    return eval_mape(res_list), res_list\n",
     "\n",
-    "percent_mape = prediction_evaluation(20, 6, 10) #Evaluate 30 min ahead forecast, 4 days of lerning, every 15 minutes\n",
-    "print(\"The MAPE of the prediction was:\", percent_mape) "
+    "percent_mape,pred_results  = prediction_evaluation(horizon1, historylength1, increment1) #Evaluate 30 min ahead forecast, 4 days of lerning, every 15 minutes\n",
+    "print(\"The MAPE of the prediction was:\", percent_mape) \n",
+    "pred_results_df = pd.DataFrame(list(pred_results), columns=ForecastResult._fields)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_results_df.set_index('ts').plot()"
    ]
   },
   {
