--- a/2-TimeseriesPrediction/TimeseriesPredictionExercise.ipynb
+++ b/2-TimeseriesPrediction/TimeseriesPredictionExercise.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -113,7 +115,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "household_data_samples = list(it_take(4, it_load_data(sourcefile)))\n",
@@ -190,7 +194,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "itslice = it_timeslices(it_load_data(sourcefile), 15, 15)\n",
@@ -291,7 +297,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "itslice = it_timeslices(it_load_data(sourcefile), 15, 15)\n",
@@ -340,7 +348,7 @@
     "    #You could try a different cluster algorithm here\n",
     "    #km = KMeans(n_clusters = n_clusters)   little slower then Mini b # 28% MAPE\n",
     "    #km = MiniBatchKMeans(n_clusters = n_clusters)# 28%\n",
-    "    km = mixture.GaussianMixture(n_components=n_clusters,covariance_type=\"diag\") #27%\n",
+    "    km = mixture.GaussianMixture(n_components=n_clusters,covariance_type=\"full\") #27%\n",
     "    km.fit(targets_arr)\n",
     "    \n",
     "    for feature in list_of_features:\n",
@@ -358,7 +366,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "centroids = discretize_target(3, first_ten_extracted)\n",
@@ -400,7 +410,7 @@
     "            \n",
     "        if cnt > (historyslices + skipintermediate):\n",
     "            if shoulddiscretize: #The centroids can change over time, this is why rediscreize each time\n",
-    "                km = discretize_target(20, training_historic)\n",
+    "                km = discretize_target(26, training_historic)\n",
     "                            \n",
     "            Xtrain, Ytrain = to_ml_dataset(training_historic, shoulddiscretize) #trainingset\n",
     "            Xtest, Ytest = to_ml_dataset([extracted_features], shoulddiscretize) #predictionset\n",
@@ -463,7 +473,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%t\n",
@@ -478,7 +490,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#print(eval_mape(pred_results))\n",
@@ -488,7 +502,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#pred_results_df[600:650].set_index('ts').plot()"
@@ -555,7 +571,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pred_results_df.set_index('ts').plot()"
