the structure changed

--- a/2-TimeseriesPrediction/TimeseriesPredictionExercise.ipynb
+++ b/2-TimeseriesPrediction/TimeseriesPredictionExercise.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -60,7 +58,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Measurement = namedtuple('Measurement', ['ts', 'sid', 'load'])\n",
@@ -73,7 +73,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def it_load_data(filename):\n",
@@ -111,9 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "household_data_samples = list(it_take(4, it_load_data(sourcefile)))\n",
@@ -135,7 +135,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def it_timeslices(it_measurements, slicemin, increment):\n",
@@ -188,9 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "itslice = it_timeslices(it_load_data(sourcefile), 15, 15)\n",
@@ -211,7 +211,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def calc_average_load(measures):\n",
@@ -271,7 +273,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def slice_plus_history(it):\n",
@@ -287,9 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "itslice = it_timeslices(it_load_data(sourcefile), 15, 15)\n",
@@ -301,7 +303,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -320,7 +324,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from scipy import stats\n",
@@ -332,7 +338,7 @@
     "    targets_arr = np.array(targets, dtype=np.float).reshape(-1, 1)\n",
     "    \n",
     "    #You could try a different cluster algorithm here\n",
-    "    km = KMeans(n_clusters = n_clusters)   #little slower then Mini b # 28% MAPE\n",
+    "    #km = KMeans(n_clusters = n_clusters)   #little slower then Mini b # 28% MAPE\n",
     "    #km = MiniBatchKMeans(n_clusters = n_clusters)# 28%\n",
     "    km = mixture.GaussianMixture(n_components=n_clusters,covariance_type=\"full\") #27%\n",
     "    km.fit(targets_arr)\n",
@@ -343,17 +349,15 @@
     "    return km\n",
     "\n",
     "def undiscretize_target(km, value):\n",
-    "    return km.cluster_centers_[value][0]\n",
-    "    #return km.means_[value][0]\n",
+    "    #return km.cluster_centers_[value][0]\n",
+    "    return km.means_[value][0]\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "centroids = discretize_target(3, first_ten_extracted)\n",
@@ -363,7 +367,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn import svm\n",
@@ -435,7 +441,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Step by step\n",
@@ -503,7 +511,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def eval_mape(results):\n",
@@ -521,54 +531,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "horizon1 = 90\n",
-    "historylength1 = 2\n",
-    "increment1 = 90"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def prediction_evaluation(horizon_and_predbase, historylength, increment):\n",
-    "    evaluation_length = int(2 * 7 * 24 * 60 /increment)\n",
-    "    res_list = list(it_take(evaluation_length, evaluate_prediction(historylength, it_timeslices(it_load_data(sourcefile), horizon_and_predbase, increment), horizon_and_predbase, increment)))\n",
-    "    return eval_mape(res_list), res_list\n",
-    "\n",
-    "percent_mape,pred_results  = prediction_evaluation(horizon1, historylength1, increment1) #Evaluate [horizon1] ahead forecast, [historylength1] days of learning, every [increment1] minutes\n",
-    "print(\"The MAPE of the prediction was:\", percent_mape) \n",
-    "pred_results_df = pd.DataFrame(list(pred_results), columns=ForecastResult._fields)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": [
-    "pred_results_df[0:50].set_index('ts').plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nrmse(list(pred_results))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "from math import sqrt\n",
@@ -593,7 +558,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "horizon1 = 90\n",
+    "historylength1 = 2\n",
+    "increment1 = 90"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prediction_evaluation(horizon_and_predbase, historylength, increment):\n",
+    "    evaluation_length = int(2 * 7 * 24 * 60 /increment)\n",
+    "    res_list = list(it_take(evaluation_length, evaluate_prediction(historylength, it_timeslices(it_load_data(sourcefile), horizon_and_predbase, increment), horizon_and_predbase, increment)))\n",
+    "    return eval_mape(res_list),nrmse(res_list), res_list\n",
+    "\n",
+    "percent_mape,percent_nrmse,pred_results  = prediction_evaluation(horizon1, historylength1, increment1) #Evaluate [horizon1] ahead forecast, [historylength1] days of learning, every [increment1] minutes\n",
+    "print(\"The MAPE of the prediction was:\", percent_mape)\n",
+    "print(\"The NRMSE of the prediction was:\", percent_nrmse)\n",
+    "pred_results_df = pd.DataFrame(list(pred_results), columns=ForecastResult._fields)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_results_df[0:50].set_index('ts').plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -614,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
