current best model, before regression trials

--- a/2-TimeseriesPrediction/TimeseriesPredictionExercise.ipynb
+++ b/2-TimeseriesPrediction/TimeseriesPredictionExercise.ipynb
@@ -11,6 +11,7 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import scipy as sp\n",
     "\n",
     "from datetime import datetime, timedelta\n",
     "from collections import namedtuple \n",
@@ -228,20 +229,44 @@
     "            \n",
     "    return np.sum(list(get_avg_load_of_device()))\n",
     "\n",
+    "from scipy.stats import kurtosis,skew\n",
+    "\n",
     "def extract_features(pb):\n",
     "    dc = dict()\n",
     "    dc.update({\"hour\": pb.currenttime.hour})\n",
     "    dc.update({\"avg\": calc_average_load(pb.base)})\n",
     "    #you can try to add additional features, e.g., last consumption?\n",
+    "    sorted_base = sorted(pb.base, key=lambda meas: meas.ts)\n",
+    "    max_ts = np.amax(list(map(lambda a: a.ts, sorted_base)))\n",
+    "    \n",
+    "    load_per_time = groupby(sorted_base, key=lambda meas: meas.ts)\n",
+    "    avgs_by_time = []\n",
+    "    for key, gmeasures in load_per_time:\n",
+    "        l_measures = list(gmeasures)\n",
+    "        list_loads = list(map(lambda a: a.load, l_measures))\n",
+    "        avgs_by_time.append(np.mean(list_loads))\n",
+    "        \n",
+    "        if key == max_ts:    \n",
+    "            dc.update({\"last\": np.mean(list_loads)})\n",
+    "    \n",
+    "    dc.update({\"kurtosis\": kurtosis(avgs_by_time)})\n",
+    "    dc.update({\"skew\": skew(avgs_by_time)})\n",
+    "    #print(sorted_base)\n",
+    "    #dc.update({\"last_cons\": np.sum(list(map(lambda a: a.load, list(load_per_time[len(list(load_per_time)) - 1]) )))}) #new feature\n",
+    "\n",
     "    \n",
     "    sorted_base = sorted(pb.base, key=lambda meas: meas.sid)\n",
     "    load_per_device = groupby(sorted_base, key=lambda meas: meas.sid)\n",
     "    \n",
     "    for key, gmeasures in load_per_device:\n",
     "        l_measures = list(gmeasures)\n",
+    "        list_loads = list(map(lambda a: a.load, l_measures))\n",
     "        dc.update({key + \"_last\": float(l_measures[len(l_measures)-1].load)})\n",
-    "        dc.update({key + \"_stdev\": np.std(list(map(lambda a: a.load, l_measures)))})\n",
-    "        dc.update({key + \"_max\": np.amax(list(map(lambda a: a.load, l_measures)))}) #new feature\n",
+    "        dc.update({key + \"_stdev\": np.std(list_loads)})\n",
+    "        dc.update({key + \"_max\": np.amax(list_loads)}) #new feature\n",
+    "        dc.update({key + \"_mean\": np.mean(list_loads)}) #new feature\n",
+    "        dc.update({key + \"_kurtosis\": kurtosis(list_loads)}) #new feature\n",
+    "        dc.update({key + \"_skew\": skew(list_loads)}) #new feature\n",
     "    \n",
     "    dc.update(target=calc_average_load(pb.actuals))\n",
     "    dc.update({'target_disc': 0})\n",
@@ -378,7 +403,7 @@
     "from sklearn import mixture\n",
     "from sklearn import tree\n",
     "\n",
-    "def evaluate_prediction(historylength_days, it_slices, minutes, increment, shoulddiscretize=True):\n",
+    "def calculate_prediction(historylength_days, it_slices, minutes, increment,num_of_class, shoulddiscretize=True):\n",
     "    historyslices = historylength_days*24*60/increment\n",
     "    skipintermediate = np.ceil(minutes/increment)\n",
     "    training_historic = list()\n",
@@ -399,7 +424,7 @@
     "            \n",
     "        if cnt > (historyslices + skipintermediate):\n",
     "            if shoulddiscretize: #The centroids can change over time, this is why rediscreize each time\n",
-    "                km = discretize_target(20, training_historic) #changed the discretize_target clusters\n",
+    "                km = discretize_target(num_of_class, training_historic) #changed the discretize_target clusters\n",
     "                            \n",
     "            Xtrain, Ytrain = to_ml_dataset(training_historic, shoulddiscretize) #trainingset\n",
     "            Xtest, Ytest = to_ml_dataset([extracted_features], shoulddiscretize) #predictionset\n",
@@ -408,12 +433,16 @@
     "            \n",
     "            try:\n",
     "                #predictor = tree.ExtraTreeClassifier() #you may want to do the training once a day/week to make the prediction faster\n",
-    "                predictor = naive_bayes.GaussianNB()\n",
+    "                #predictor = naive_bayes.GaussianNB()\n",
     "                #predictor = naive_bayes.MultinomialNB()\n",
-    "                #predictor = naive_bayes.BernoulliNB()\n",
+    "                predictor = naive_bayes.BernoulliNB() # 140 or 100, 3 days  was best mape 24, nrmse 69\n",
     "                #predictor = linear_model.RidgeClassifier()\n",
     "                #predictor = linear_model.SGDClassifier()   # not good\n",
     "                #predictor = mixture.BayesianGaussianMixture()\n",
+    "                #predictor = svm.SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+    "                #                    decision_function_shape='ovr', degree=3, gamma='auto', kernel='sigmoid',\n",
+    "                #                    max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+    "                #                    tol=0.001, verbose=False)\n",
     "                clf = predictor.fit(Xtrain, Ytrain) #actually training the machine learning algorithm\n",
     "                predicted = clf.predict(Xtest)[0]\n",
     "                if shoulddiscretize:\n",
@@ -425,6 +454,111 @@
     "                print(\"Error occured-continuing: \" + str(e))\n",
     "                pass\n",
     "                \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def calculate_persistence_variant(historylength_days, it_slices, minutes, increment, shoulddiscretize=True):\n",
+    "    historyslices = historylength_days*24*60/increment\n",
+    "    skipintermediate = np.ceil(minutes/increment)\n",
+    "    training_historic = list()\n",
+    "    intermediate = list()\n",
+    "    \n",
+    "    one_day_holder = 0\n",
+    "    pred_count = False\n",
+    "    \n",
+    "    cnt = 0\n",
+    "    for sli in it_slices:\n",
+    "        cnt += 1\n",
+    "        \n",
+    "        temp_target = calc_average_load(sli.actuals)\n",
+    "        intermediate.insert(0, temp_target) #we don't want any overlap of historic and prediction data\n",
+    "        if len(intermediate) > skipintermediate: \n",
+    "            training_historic.insert(0, intermediate.pop())\n",
+    "        \n",
+    "        if len(training_historic) > historyslices:\n",
+    "            training_historic.pop()\n",
+    "            \n",
+    "        if cnt > (historyslices + skipintermediate):            \n",
+    "            try:\n",
+    "                if not pred_count:\n",
+    "                    one_day_holder = temp_target\n",
+    "                    pred_count = True\n",
+    "                    last_price = training_historic[0]\n",
+    "                    yield ForecastResult(sli.currenttime, one_day_holder, last_price)\n",
+    "                    continue\n",
+    "                work_actual = temp_target\n",
+    "                predicted = one_day_holder\n",
+    "                one_day_holder = work_actual\n",
+    "                if predicted > 600:\n",
+    "                    predicted = 500\n",
+    "                #day_diff = work_actual - predicted\n",
+    "                #if abs(day_diff)>200:\n",
+    "                #    predicted += day_diff/2\n",
+    "                #    predicted  = min(max(predicted,120),1000)\n",
+    "                #print(\"this is work actual : \" + str(work_actual))\n",
+    "                #print(\"this is predicted : \" + str(predicted))\n",
+    "                #print(\"Done...\")\n",
+    "                yield ForecastResult(sli.currenttime, work_actual, predicted)\n",
+    "            except Exception as e: \n",
+    "                print(\"Error occured-continuing: \" + str(e))\n",
+    "                pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def calculate_persistence(historylength_days, it_slices, minutes, increment, shoulddiscretize=True):\n",
+    "    historyslices = historylength_days*24*60/increment\n",
+    "    skipintermediate = np.ceil(minutes/increment)\n",
+    "    training_historic = list()\n",
+    "    intermediate = list()\n",
+    "    \n",
+    "    one_day_holder = 0\n",
+    "    pred_count = False\n",
+    "    \n",
+    "    cnt = 0\n",
+    "    for sli in it_slices:\n",
+    "        cnt += 1\n",
+    "        \n",
+    "        temp_target = calc_average_load(sli.actuals)\n",
+    "        intermediate.insert(0, temp_target) #we don't want any overlap of historic and prediction data\n",
+    "        if len(intermediate) > skipintermediate: \n",
+    "            training_historic.insert(0, intermediate.pop())\n",
+    "        \n",
+    "        if len(training_historic) > historyslices:\n",
+    "            training_historic.pop()\n",
+    "            \n",
+    "        if cnt > (historyslices + skipintermediate):            \n",
+    "            try:\n",
+    "                if not pred_count:\n",
+    "                    one_day_holder = temp_target\n",
+    "                    pred_count = True\n",
+    "                    last_price = training_historic[0]\n",
+    "                    yield ForecastResult(sli.currenttime, one_day_holder, last_price)\n",
+    "                    continue\n",
+    "                work_actual = temp_target\n",
+    "                predicted = one_day_holder\n",
+    "                one_day_holder = work_actual\n",
+    "                #print(\"this is work actual : \" + str(work_actual))\n",
+    "                #print(\"this is predicted : \" + str(predicted))\n",
+    "                #print(\"Done...\")\n",
+    "                yield ForecastResult(sli.currenttime, work_actual, predicted)\n",
+    "            except Exception as e: \n",
+    "                print(\"Error occured-continuing: \" + str(e))\n",
+    "                pass"
    ]
   },
   {
@@ -455,7 +589,7 @@
     "#to_ml_dataset([extract_features(next(a))], True)\n",
     "\n",
     "## creates the forecastresult\n",
-    "#b = evaluate_prediction(1, a, 30, 30)\n",
+    "#b = calculate_prediction(1, a, 30, 30)\n",
     "#next(b)"
    ]
   },
@@ -470,7 +604,7 @@
     "%t\n",
     "#discretize = True\n",
     "\n",
-    "#pred_results = it_take(1000, evaluate_prediction(historylength1, it_timeslices(it_load_data(sourcefile), horizon1, increment1), horizon1, increment1))\n",
+    "#pred_results = it_take(1000, calculate_prediction(historylength1, it_timeslices(it_load_data(sourcefile), horizon1, increment1), horizon1, increment1))\n",
     "#pred_results_df = pd.DataFrame(list(pred_results), columns=ForecastResult._fields)\n",
     "#del pred_results\n",
     "#pred_results_df.head()"
@@ -563,9 +697,10 @@
    },
    "outputs": [],
    "source": [
-    "horizon1 = 90\n",
-    "historylength1 = 2\n",
-    "increment1 = 90"
+    "horizon1 = 100 # 100 for both and 3 days is best\n",
+    "historylength1 = 2 # 2 is better then 3\n",
+    "increment1 = 100\n",
+    "num_discrete_class = 20"
    ]
   },
   {
@@ -574,24 +709,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prediction_evaluation(horizon_and_predbase, historylength, increment):\n",
+    "def prediction_evaluation(horizon_and_predbase, historylength, increment, num_of_class):\n",
     "    evaluation_length = int(2 * 7 * 24 * 60 /increment)\n",
-    "    res_list = list(it_take(evaluation_length, evaluate_prediction(historylength, it_timeslices(it_load_data(sourcefile), horizon_and_predbase, increment), horizon_and_predbase, increment)))\n",
+    "    res_list = list(it_take(evaluation_length, calculate_prediction(historylength, it_timeslices(it_load_data(sourcefile), horizon_and_predbase, increment), horizon_and_predbase, increment,num_of_class)))\n",
+    "    #res_list = list(it_take(evaluation_length, calculate_persistence(historylength, it_timeslices(it_load_data(sourcefile), horizon_and_predbase, increment), horizon_and_predbase, increment)))\n",
     "    return eval_mape(res_list),nrmse(res_list), res_list\n",
     "\n",
-    "percent_mape,percent_nrmse,pred_results  = prediction_evaluation(horizon1, historylength1, increment1) #Evaluate [horizon1] ahead forecast, [historylength1] days of learning, every [increment1] minutes\n",
+    "percent_mape,percent_nrmse,pred_results  = prediction_evaluation(horizon1, historylength1, increment1,num_discrete_class) #Evaluate [horizon1] ahead forecast, [historylength1] days of learning, every [increment1] minutes\n",
     "print(\"The MAPE of the prediction was:\", percent_mape)\n",
     "print(\"The NRMSE of the prediction was:\", percent_nrmse)\n",
     "pred_results_df = pd.DataFrame(list(pred_results), columns=ForecastResult._fields)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pred_results_df[0:50].set_index('ts').plot()"
    ]
   },
   {
@@ -602,6 +729,35 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_results_df.set_index('ts').plot()\n",
+    "len(pred_results_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV as rand_search\n",
+    "\n",
+    "class our_classifier:\n",
+    "    def __init__(self,horizon_and_predbase, historylength, increment):\n",
+    "        \n",
+    "    \n",
+    "    def fit()\n",
+    "\n",
+    "from sklearn.model_selection import GridSearchCV\n"
+   ]
   }
  ],
  "metadata": {
